--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,8 @@
-name = "{{ project-name }}"
-type = "javascript"
+name = "oauth-client"
+main = "src/index.ts"
+compatibility_date = "2024-07-25"
 
-account_id = ""
-kv_namespaces = [ 
-         { binding = "authTokens", id = "" }
-]
+
+[[kv_namespaces]]
+binding = "authTokens"
+id = "ad5842663ef846aeaf0ba8d85c207273"
