添加了一个完整版本的 README.zh-CN.md 更新了 README.md 添加了一个 OAuth-worker.svg 图片 更新了 wrangler.toml 更新了 package.json

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,3 +6,7 @@ compatibility_date = "2024-07-25"
 [[kv_namespaces]]
 binding = "authTokens"
 id = "ad5842663ef846aeaf0ba8d85c207273"
+
+[vars]
+LOCAL = false
+
