--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "{{ project-name }}",
+  "name": "cloudflare-workers-google-oauth",
   "version": "1.0.0",
   "description": "Cloudflare worker TypeScript template",
   "main": "dist/worker.js",
@@ -14,7 +14,7 @@
     "dev:build": "env-cmd webpack --watch",
     "dev": "npm-run-all --parallel dev:*"
   },
-  "authors": "{{ authors }}",
+  "authors": "crazynomad",
   "license": "Unlicense",
   "eslintConfig": {
     "root": true,
@@ -24,7 +24,7 @@
     ]
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240725.0",
+    "@cloudflare/workers-types": "^2.2.2",
     "@types/jest": "^26.0.23",
     "@types/service-worker-mock": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
@@ -39,9 +39,8 @@
     "service-worker-mock": "^2.0.5",
     "ts-jest": "^27.0.1",
     "ts-loader": "^9.2.2",
-    "typescript": "^4.3.2",
+    "typescript": "^5.4.5",
     "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.0",
-    "wrangler": "^3.67.1"
+    "webpack-cli": "^4.7.0"
   }
 }
