--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "publish": "npm-run-all format lint build publish:wrangler",
     "dev:wrangler": "wrangler dev",
     "dev:build": "env-cmd webpack --watch",
-    "dev": "npm-run-all --parallel dev:*"
+    "dev": "npm-run-all --parallel dev:*",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "authors": "crazynomad",
   "license": "Unlicense",
@@ -34,17 +37,20 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-typescript": "^3.0.0",
     "jest": "^27.0.1",
+    "mermaid": "^10.9.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.0",
     "service-worker-mock": "^2.0.5",
     "ts-jest": "^27.0.1",
     "ts-loader": "^9.2.2",
     "typescript": "^5.4.5",
+    "vitepress": "^1.3.2",
+    "vitepress-plugin-mermaid": "^2.0.16",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
   },
-  "dependencies": {    
+  "dependencies": {
     "hono": "^4.5.3",
-    "nanoid": "^5.0.7"    
+    "nanoid": "^5.0.7"
   }
 }
